--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,9 +15,9 @@
   --primary-foreground: hsl(0 0% 98%);
   --secondary: hsl(0 0% 96.1%);
   --secondary-foreground: hsl(0 0% 9%);
-  --muted: hsl(0 0% 96.1%);
+  --muted: hsl(252, 100%, 96%);
   --muted-foreground: hsl(0 0% 45.1%);
-  --accent: hsl(0 0% 96.1%);
+  --accent: hsl(0, 0%, 98%);
   --accent-foreground: hsl(0 0% 9%);
   --destructive: rgb(239, 68, 68);
   --destructive-foreground: rgb(239, 68, 68);
