--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
   --popover-foreground: hsl(0 0% 3.9%);
   --primary: hsl(252, 100%, 62%);
   --primary-foreground: hsl(0 0% 98%);
+  --primary-hover: hsl(252, 100%, 84%);
   --secondary: hsl(0 0% 96.1%);
   --secondary-foreground: hsl(0 0% 9%);
   --muted: hsl(252, 100%, 96%);
@@ -68,6 +69,7 @@
   --color-popover-foreground: var(--popover-foreground);
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
+  --color-primary-hover: var(--primary-hover);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-muted: var(--muted);
